k8s/base/services/discovery-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  labels:
    app: discovery-server
    tier: infrastructure
    component: service-discovery
spec:
  type: ClusterIP
  selector:
    app: discovery-server
  ports:
  - name: http
    port: 8761
    targetPort: 8761
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
