k8s/base/services/inventory-service-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: stockxpress
  labels:
    app: inventory-service
    component: microservice
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: http
  selector:
    app: inventory-service
