k8s/base/services/notification-service-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: stockxpress
  labels:
    app: notification-service
    component: microservice
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 8084
      targetPort: 8084
      protocol: TCP
      name: http
  selector:
    app: notification-service
