k8s/base/services/order-service-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: stockxpress
  labels:
    app: order-service
    component: microservice
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
  selector:
    app: order-service
