k8s/base/services/product-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
    tier: backend
    component: business-logic
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  sessionAffinity: None
